--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
         <div class="d-flex row mx-4" id="genre"></div>
     </div>
 
-    <div class="serchResult d-flex row m-md-4 justify-content-center" id="serchResult"></div>
+    <div class="serchResult d-flex row m-1 m-md-4 justify-content-center" id="serchResult">
+        
+    </div>
 
     <script src="./script.js" type="text/javascript"></script>    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
