--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="welcome">
+    <div class="welcome welcome-decor" id="welcome">
         <nav class="navbar navbar-expand-sm">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"><b>Anime</b>Search</a>
@@ -45,10 +45,10 @@
               </div>
             </div>
         </nav>
-        <h1 class="d-flex justify-content-center my-5">Search for Anime</h1>
+        <h1 class="d-flex justify-content-center my-5" id="welcomeText">Search for Anime</h1>
     </div>
 
-    <div class="search d-flex justify-content-center">
+    <div class="search d-flex justify-content-center" id="searchBox">
         <div class="d-flex col-10">
             <div class="input-group input-group-lg">
                 <input type="text" class="form-control" placeholder="searh something... ex.naruto" id="searchWord">
@@ -61,12 +61,10 @@
         <div class="d-flex justify-content-center my-3">
             <h2>Or <b>Browse</b> categories</h2>
         </div>
-        <div class="d-flex row mx-4" id="genre"></div>
+        <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 g-4 mx-md-5" id="genre"></div>
     </div>
 
-    <div class="serchResult d-flex row m-1 m-md-4 justify-content-center" id="serchResult">
-        
-    </div>
+    <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-6 g-4 m-1 m-md-3" id="serchResult"></div>
 
     <script src="./script.js" type="text/javascript"></script>    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
