--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    
     <div class="welcome welcome-decor" id="welcome">
         <nav class="navbar navbar-expand-sm">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><b>Anime</b>Search</a>
+              <a class="navbar-brand" href="#" id="home"><b>Anime</b>Search</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -21,7 +22,7 @@
                 <ul class="navbar-nav d-flex align-content-center m-1">
                     <li class="nav-item">
                         <div class="d-flex input-group rounded">
-                            <input type="search" class="form-control rounded" placeholder="Search"/>
+                            <input type="search" class="form-control rounded" id="searchWord" placeholder="Search"/>
                             <span class="btn" id="search-addon">
                               <i class="bi bi-search link-dark"></i>
                             </span>
@@ -45,13 +46,15 @@
               </div>
             </div>
         </nav>
-        <h1 class="d-flex justify-content-center my-5" id="welcomeText">Search for Anime</h1>
+        <div id="welcomeText">
+            <h1 class="d-flex justify-content-center">Search for Anime</h1>
+        </div>
     </div>
 
     <div class="search d-flex justify-content-center" id="searchBox">
         <div class="d-flex col-10">
             <div class="input-group input-group-lg">
-                <input type="text" class="form-control" placeholder="searh something... ex.naruto" id="searchWord">
+                <input type="text" class="form-control" placeholder="searh something... ex.naruto" id="searchWordHome">
                 <button class="input-group-text" id="search">search</button>
             </div>
         </div>
@@ -61,10 +64,15 @@
         <div class="d-flex justify-content-center my-3">
             <h2>Or <b>Browse</b> categories</h2>
         </div>
-        <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 g-4 mx-md-5" id="genre"></div>
+        <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 g-4 mx-1 mx-md-5" id="genre"></div>
     </div>
 
-    <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-6 g-4 m-1 m-md-3" id="serchResult"></div>
+    <div id="displaySearchResult">
+        <h2 class="d-flex justify-content-center" id="keyword"></h2>
+        <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-6 g-4 m-1 m-md-3" id="serchResult">
+    </div>
+        
+    </div>
 
     <script src="./script.js" type="text/javascript"></script>    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
