like -1 card, post function

--- a/index.html
+++ b/index.html
@@ -72,16 +72,35 @@
         <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-6 g-4 m-1 m-md-3" id="serchResult">
     </div>
     
-    <div class="mx-2">
+    <div class="mx-md-4">
         <div class="card mb-3">
             <div class="row g-0">
               <div class="col-12 col-sm-4 col-md-2">
-                <img src="https://cdn.myanimelist.net/images/anime/1772/105851.jpg" style="max-height: 20rem;" class="img-fluid rounded-start" alt="...">
+                <img src="https://cdn.myanimelist.net/images/anime/1019/103292.jpg" style="max-height: 20rem;" class="img-fluid rounded-start" alt="...">
               </div>
               <div class="col-12 col-sm-8 col-md-10">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h4 class="card-title">Boku no Hero Academia the Movie 2: Heroes:Rising</h4> 
+                    <div class="d-flex col card-text">
+                        <p>PG-13</p>
+                        <p> &nbsp | &nbsp </p>
+                        <p>Action/Comedy/Fantasy</p>
+                    </div>
+
+                    <p class="card-text">
+                        Moments prior to Naruto Uzumaki's birth, a huge demon known as the Kyuubi, the Nine-Tailed Fox, attacked Konohagakure, the Hidden Leaf Village, and wreaked havoc. In order to put an end to the Kyuubi
+                    </p>
+                    <div class="d-flex justify-content-between">
+                        <div class="d-flex col">
+                            <p class="border border-info px-1 rounded me-2">score 7.88</p>
+                            <p>Finished Airing</p>
+                        </div>
+                        <div>
+                            <button class="btn border-danger mx-3"><i class="bi bi-heart"></i></button>
+                            <button type="button" class="btn btn-warning">More details</button>
+                        </div>
+                    </div>
+                    
                 </div>
               </div>
             </div>
