--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </nav>
         <div id="welcomeText">
-            <h1 class="d-flex justify-content-center">Search for Anime</h1>
+            <h1 class="d-flex justify-content-center fw-bold">Search for Anime</h1>
         </div>
     </div>
 
@@ -103,14 +103,14 @@
         <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 id="modalTitle" class="modal-title">Howl no Ugoku Shiro</h5>
+                    <h5 id="modalTitle" class="modal-title fw-bold">Howl no Ugoku Shiro</h5>
                     <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <div class="text-center">
                         <img id="modalImg" src="https://cdn.myanimelist.net/images/anime/5/75810.jpg" class="img-fluid rounded-start mh-[15rem]" alt="...">
                     </div>
-                    <h6 id="modalTitleSmall">Howl no Ugoku Shiro</h6>
+                    <h6 id="modalTitleSmall" class="fw-bold">Howl no Ugoku Shiro</h6>
                     <!--
                     <p id="modalGenre" class="text-secondary">Adventure/Drama/Fantasy/Romance</p>
                     -->
